comp/parser.output
Terminals unused in grammar

    ADD


State 15 conflicts: 1 shift/reduce, 1 reduce/reduce
State 33 conflicts: 1 shift/reduce, 1 reduce/reduce
State 55 conflicts: 5 shift/reduce, 1 reduce/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 86 conflicts: 10 reduce/reduce
State 88 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 105 conflicts: 6 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 125 conflicts: 6 shift/reduce
State 127 conflicts: 6 shift/reduce
State 137 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce, 1 reduce/reduce
State 152 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Goal "end of file"

    1 Goal: MainClass ClassDeclarations "end of file"

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID MAIN LP STRING LB RB Identifier RP LM Statements RM RM

    3 ClassDeclarations: ClassDeclaration ClassDeclarations
    4                  | %empty

    5 ClassDeclaration: CLASS Identifier EXTENDS Identifier LM VarDeclarations MethodDeclarations RM
    6                 | CLASS Identifier LM VarDeclarations MethodDeclarations RM
    7                 | CLASS Identifier LM MethodDeclarations RM
    8                 | CLASS Identifier EXTENDS Identifier LM MethodDeclarations RM

    9 VarDeclarations: VarDeclarations VarDeclaration
   10                | %empty

   11 VarDeclaration: Type Identifier SEMICOLON

   12 MethodDeclarations: %empty
   13                   | MethodDeclaration MethodDeclarations

   14 MethodDeclaration: PUBLIC Type Identifier LP Arguments RP LM VarDeclarations Statements RETURN Expression SEMICOLON RM
   15                  | PUBLIC Type Identifier LP Arguments RP LM Statements RETURN Expression SEMICOLON RM

   16 Arguments: Type Identifier
   17          | Type Identifier COMMA Arguments
   18          | %empty

   19 Type: INT LB RB
   20     | BOOL
   21     | INT
   22     | Identifier

   23 Statements: Statement Statements
   24           | %empty

   25 Statement: LM Statements RM
   26          | IF LP Expression RP Statement ELSE Statement
   27          | WHILE LP Expression RP Statement
   28          | SYSTEMOUTPRINT LP Expression RP SEMICOLON
   29          | Identifier EQ Expression SEMICOLON
   30          | Identifier LB Expression RB EQ Expression SEMICOLON

   31 Expressions: Expression
   32            | Expression COMMA Expressions
   33            | %empty

   34 Expression: Expression AND Expression
   35           | Expression LESSTHAN Expression
   36           | Expression PLUS Term
   37           | Expression MIN Term
   38           | Term
   39           | Expression LB Expression RB
   40           | Expression DOT LENGTH
   41           | Expression DOT Identifier LP Expressions RP
   42           | TRUE
   43           | FALSE
   44           | Identifier
   45           | THIS
   46           | NEW INT LB Expression RB
   47           | NEW Identifier LP RP
   48           | EXMARK Expression

   49 Term: Term MULT Factor
   50     | Factor

   51 Factor: %empty
   52       | LP Expression RP
   53       | MIN Factor
   54       | NUM
   55       | ID

   56 Identifier: ID


Terminals, with rules where they appear

    "end of file" (0) 0 1
    error (256)
    PLUS <std::string> (258) 36
    MULT <std::string> (259) 49
    LESSTHAN <std::string> (260) 35
    MIN <std::string> (261) 37 53
    AND <std::string> (262) 34
    LP <std::string> (263) 2 14 15 26 27 28 41 47 52
    RP <std::string> (264) 2 14 15 26 27 28 41 47 52
    LB <std::string> (265) 2 19 30 39 46
    RB <std::string> (266) 2 19 30 39 46
    LM <std::string> (267) 2 5 6 7 8 14 15 25
    RM <std::string> (268) 2 5 6 7 8 14 15 25
    COMMA <std::string> (269) 17 32
    SEMICOLON <std::string> (270) 11 14 15 28 29 30
    DOT <std::string> (271) 40 41
    IF <std::string> (272) 26
    ELSE <std::string> (273) 26
    WHILE <std::string> (274) 27
    CLASS <std::string> (275) 2 5 6 7 8
    EXTENDS <std::string> (276) 5 8
    PUBLIC <std::string> (277) 2 14 15
    STATIC <std::string> (278) 2
    VOID <std::string> (279) 2
    BOOL <std::string> (280) 20
    INT <std::string> (281) 19 21 46
    STRING <std::string> (282) 2
    TRUE <std::string> (283) 42
    FALSE <std::string> (284) 43
    THIS <std::string> (285) 45
    NEW <std::string> (286) 46 47
    SYSTEMOUTPRINT <std::string> (287) 28
    RETURN <std::string> (288) 14 15
    LENGTH <std::string> (289) 40
    MAIN <std::string> (290) 2
    ID <std::string> (291) 55 56
    NUM <std::string> (292) 54
    EQ <std::string> (293) 29 30
    EXMARK <std::string> (294) 48
    ADD (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Goal <Node *> (42)
        on left: 1
        on right: 0
    MainClass <Node *> (43)
        on left: 2
        on right: 1
    ClassDeclarations <Node *> (44)
        on left: 3 4
        on right: 1 3
    ClassDeclaration <Node *> (45)
        on left: 5 6 7 8
        on right: 3
    VarDeclarations <Node *> (46)
        on left: 9 10
        on right: 5 6 9 14
    VarDeclaration <Node *> (47)
        on left: 11
        on right: 9
    MethodDeclarations <Node *> (48)
        on left: 12 13
        on right: 5 6 7 8 13
    MethodDeclaration <Node *> (49)
        on left: 14 15
        on right: 13
    Arguments <Node *> (50)
        on left: 16 17 18
        on right: 14 15 17
    Type <Node *> (51)
        on left: 19 20 21 22
        on right: 11 14 15 16 17
    Statements <Node *> (52)
        on left: 23 24
        on right: 2 14 15 23 25
    Statement <Node *> (53)
        on left: 25 26 27 28 29 30
        on right: 23 26 27
    Expressions <Node *> (54)
        on left: 31 32 33
        on right: 32 41
    Expression <Node *> (55)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 14 15 26 27 28 29 30 31 32 34 35 36 37 39 40 41 46 48 52
    Term <Node *> (56)
        on left: 49 50
        on right: 36 37 38 49
    Factor <Node *> (57)
        on left: 51 52 53 54 55
        on right: 49 50 53
    Identifier <Node *> (58)
        on left: 56
        on right: 2 5 6 7 8 11 14 15 16 17 22 29 30 41 44 47


State 0

    0 $accept: . Goal "end of file"

    CLASS  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: CLASS . Identifier LM PUBLIC STATIC VOID MAIN LP STRING LB RB Identifier RP LM Statements RM RM

    ID  shift, and go to state 4

    Identifier  go to state 5


State 2

    0 $accept: Goal . "end of file"

    "end of file"  shift, and go to state 6


State 3

    1 Goal: MainClass . ClassDeclarations "end of file"

    CLASS  shift, and go to state 7

    $default  reduce using rule 4 (ClassDeclarations)

    ClassDeclarations  go to state 8
    ClassDeclaration   go to state 9


State 4

   56 Identifier: ID .

    $default  reduce using rule 56 (Identifier)


State 5

    2 MainClass: CLASS Identifier . LM PUBLIC STATIC VOID MAIN LP STRING LB RB Identifier RP LM Statements RM RM

    LM  shift, and go to state 10


State 6

    0 $accept: Goal "end of file" .

    $default  accept


State 7

    5 ClassDeclaration: CLASS . Identifier EXTENDS Identifier LM VarDeclarations MethodDeclarations RM
    6                 | CLASS . Identifier LM VarDeclarations MethodDeclarations RM
    7                 | CLASS . Identifier LM MethodDeclarations RM
    8                 | CLASS . Identifier EXTENDS Identifier LM MethodDeclarations RM

    ID  shift, and go to state 4

    Identifier  go to state 11


State 8

    1 Goal: MainClass ClassDeclarations . "end of file"

    "end of file"  shift, and go to state 12


State 9

    3 ClassDeclarations: ClassDeclaration . ClassDeclarations

    CLASS  shift, and go to state 7

    $default  reduce using rule 4 (ClassDeclarations)

    ClassDeclarations  go to state 13
    ClassDeclaration   go to state 9


State 10

    2 MainClass: CLASS Identifier LM . PUBLIC STATIC VOID MAIN LP STRING LB RB Identifier RP LM Statements RM RM

    PUBLIC  shift, and go to state 14


State 11

    5 ClassDeclaration: CLASS Identifier . EXTENDS Identifier LM VarDeclarations MethodDeclarations RM
    6                 | CLASS Identifier . LM VarDeclarations MethodDeclarations RM
    7                 | CLASS Identifier . LM MethodDeclarations RM
    8                 | CLASS Identifier . EXTENDS Identifier LM MethodDeclarations RM

    LM       shift, and go to state 15
    EXTENDS  shift, and go to state 16


State 12

    1 Goal: MainClass ClassDeclarations "end of file" .

    $default  reduce using rule 1 (Goal)


State 13

    3 ClassDeclarations: ClassDeclaration ClassDeclarations .

    $default  reduce using rule 3 (ClassDeclarations)


State 14

    2 MainClass: CLASS Identifier LM PUBLIC . STATIC VOID MAIN LP STRING LB RB Identifier RP LM Statements RM RM

    STATIC  shift, and go to state 17


State 15

    6 ClassDeclaration: CLASS Identifier LM . VarDeclarations MethodDeclarations RM
    7                 | CLASS Identifier LM . MethodDeclarations RM

    PUBLIC  shift, and go to state 18

    RM        reduce using rule 10 (VarDeclarations)
    RM        [reduce using rule 12 (MethodDeclarations)]
    PUBLIC    [reduce using rule 10 (VarDeclarations)]
    $default  reduce using rule 10 (VarDeclarations)

    VarDeclarations     go to state 19
    MethodDeclarations  go to state 20
    MethodDeclaration   go to state 21


State 16

    5 ClassDeclaration: CLASS Identifier EXTENDS . Identifier LM VarDeclarations MethodDeclarations RM
    8                 | CLASS Identifier EXTENDS . Identifier LM MethodDeclarations RM

    ID  shift, and go to state 4

    Identifier  go to state 22


State 17

    2 MainClass: CLASS Identifier LM PUBLIC STATIC . VOID MAIN LP STRING LB RB Identifier RP LM Statements RM RM

    VOID  shift, and go to state 23


State 18

   14 MethodDeclaration: PUBLIC . Type Identifier LP Arguments RP LM VarDeclarations Statements RETURN Expression SEMICOLON RM
   15                  | PUBLIC . Type Identifier LP Arguments RP LM Statements RETURN Expression SEMICOLON RM

    BOOL  shift, and go to state 24
    INT   shift, and go to state 25
    ID    shift, and go to state 4

    Type        go to state 26
    Identifier  go to state 27


State 19

    6 ClassDeclaration: CLASS Identifier LM VarDeclarations . MethodDeclarations RM
    9 VarDeclarations: VarDeclarations . VarDeclaration

    PUBLIC  shift, and go to state 18
    BOOL    shift, and go to state 24
    INT     shift, and go to state 25
    ID      shift, and go to state 4

    $default  reduce using rule 12 (MethodDeclarations)

    VarDeclaration      go to state 28
    MethodDeclarations  go to state 29
    MethodDeclaration   go to state 21
    Type                go to state 30
    Identifier          go to state 27


State 20

    7 ClassDeclaration: CLASS Identifier LM MethodDeclarations . RM

    RM  shift, and go to state 31


State 21

   13 MethodDeclarations: MethodDeclaration . MethodDeclarations

    PUBLIC  shift, and go to state 18

    $default  reduce using rule 12 (MethodDeclarations)

    MethodDeclarations  go to state 32
    MethodDeclaration   go to state 21


State 22

    5 ClassDeclaration: CLASS Identifier EXTENDS Identifier . LM VarDeclarations MethodDeclarations RM
    8                 | CLASS Identifier EXTENDS Identifier . LM MethodDeclarations RM

    LM  shift, and go to state 33


State 23

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID . MAIN LP STRING LB RB Identifier RP LM Statements RM RM

    MAIN  shift, and go to state 34


State 24

   20 Type: BOOL .

    $default  reduce using rule 20 (Type)


State 25

   19 Type: INT . LB RB
   21     | INT .

    LB  shift, and go to state 35

    $default  reduce using rule 21 (Type)


State 26

   14 MethodDeclaration: PUBLIC Type . Identifier LP Arguments RP LM VarDeclarations Statements RETURN Expression SEMICOLON RM
   15                  | PUBLIC Type . Identifier LP Arguments RP LM Statements RETURN Expression SEMICOLON RM

    ID  shift, and go to state 4

    Identifier  go to state 36


State 27

   22 Type: Identifier .

    $default  reduce using rule 22 (Type)


State 28

    9 VarDeclarations: VarDeclarations VarDeclaration .

    $default  reduce using rule 9 (VarDeclarations)


State 29

    6 ClassDeclaration: CLASS Identifier LM VarDeclarations MethodDeclarations . RM

    RM  shift, and go to state 37


State 30

   11 VarDeclaration: Type . Identifier SEMICOLON

    ID  shift, and go to state 4

    Identifier  go to state 38


State 31

    7 ClassDeclaration: CLASS Identifier LM MethodDeclarations RM .

    $default  reduce using rule 7 (ClassDeclaration)


State 32

   13 MethodDeclarations: MethodDeclaration MethodDeclarations .

    $default  reduce using rule 13 (MethodDeclarations)


State 33

    5 ClassDeclaration: CLASS Identifier EXTENDS Identifier LM . VarDeclarations MethodDeclarations RM
    8                 | CLASS Identifier EXTENDS Identifier LM . MethodDeclarations RM

    PUBLIC  shift, and go to state 18

    RM        reduce using rule 10 (VarDeclarations)
    RM        [reduce using rule 12 (MethodDeclarations)]
    PUBLIC    [reduce using rule 10 (VarDeclarations)]
    $default  reduce using rule 10 (VarDeclarations)

    VarDeclarations     go to state 39
    MethodDeclarations  go to state 40
    MethodDeclaration   go to state 21


State 34

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID MAIN . LP STRING LB RB Identifier RP LM Statements RM RM

    LP  shift, and go to state 41


State 35

   19 Type: INT LB . RB

    RB  shift, and go to state 42


State 36

   14 MethodDeclaration: PUBLIC Type Identifier . LP Arguments RP LM VarDeclarations Statements RETURN Expression SEMICOLON RM
   15                  | PUBLIC Type Identifier . LP Arguments RP LM Statements RETURN Expression SEMICOLON RM

    LP  shift, and go to state 43


State 37

    6 ClassDeclaration: CLASS Identifier LM VarDeclarations MethodDeclarations RM .

    $default  reduce using rule 6 (ClassDeclaration)


State 38

   11 VarDeclaration: Type Identifier . SEMICOLON

    SEMICOLON  shift, and go to state 44


State 39

    5 ClassDeclaration: CLASS Identifier EXTENDS Identifier LM VarDeclarations . MethodDeclarations RM
    9 VarDeclarations: VarDeclarations . VarDeclaration

    PUBLIC  shift, and go to state 18
    BOOL    shift, and go to state 24
    INT     shift, and go to state 25
    ID      shift, and go to state 4

    $default  reduce using rule 12 (MethodDeclarations)

    VarDeclaration      go to state 28
    MethodDeclarations  go to state 45
    MethodDeclaration   go to state 21
    Type                go to state 30
    Identifier          go to state 27


State 40

    8 ClassDeclaration: CLASS Identifier EXTENDS Identifier LM MethodDeclarations . RM

    RM  shift, and go to state 46


State 41

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID MAIN LP . STRING LB RB Identifier RP LM Statements RM RM

    STRING  shift, and go to state 47


State 42

   19 Type: INT LB RB .

    $default  reduce using rule 19 (Type)


State 43

   14 MethodDeclaration: PUBLIC Type Identifier LP . Arguments RP LM VarDeclarations Statements RETURN Expression SEMICOLON RM
   15                  | PUBLIC Type Identifier LP . Arguments RP LM Statements RETURN Expression SEMICOLON RM

    BOOL  shift, and go to state 24
    INT   shift, and go to state 25
    ID    shift, and go to state 4

    $default  reduce using rule 18 (Arguments)

    Arguments   go to state 48
    Type        go to state 49
    Identifier  go to state 27


State 44

   11 VarDeclaration: Type Identifier SEMICOLON .

    $default  reduce using rule 11 (VarDeclaration)


State 45

    5 ClassDeclaration: CLASS Identifier EXTENDS Identifier LM VarDeclarations MethodDeclarations . RM

    RM  shift, and go to state 50


State 46

    8 ClassDeclaration: CLASS Identifier EXTENDS Identifier LM MethodDeclarations RM .

    $default  reduce using rule 8 (ClassDeclaration)


State 47

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID MAIN LP STRING . LB RB Identifier RP LM Statements RM RM

    LB  shift, and go to state 51


State 48

   14 MethodDeclaration: PUBLIC Type Identifier LP Arguments . RP LM VarDeclarations Statements RETURN Expression SEMICOLON RM
   15                  | PUBLIC Type Identifier LP Arguments . RP LM Statements RETURN Expression SEMICOLON RM

    RP  shift, and go to state 52


State 49

   16 Arguments: Type . Identifier
   17          | Type . Identifier COMMA Arguments

    ID  shift, and go to state 4

    Identifier  go to state 53


State 50

    5 ClassDeclaration: CLASS Identifier EXTENDS Identifier LM VarDeclarations MethodDeclarations RM .

    $default  reduce using rule 5 (ClassDeclaration)


State 51

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID MAIN LP STRING LB . RB Identifier RP LM Statements RM RM

    RB  shift, and go to state 54


State 52

   14 MethodDeclaration: PUBLIC Type Identifier LP Arguments RP . LM VarDeclarations Statements RETURN Expression SEMICOLON RM
   15                  | PUBLIC Type Identifier LP Arguments RP . LM Statements RETURN Expression SEMICOLON RM

    LM  shift, and go to state 55


State 53

   16 Arguments: Type Identifier .
   17          | Type Identifier . COMMA Arguments

    COMMA  shift, and go to state 56

    $default  reduce using rule 16 (Arguments)


State 54

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID MAIN LP STRING LB RB . Identifier RP LM Statements RM RM

    ID  shift, and go to state 4

    Identifier  go to state 57


State 55

   14 MethodDeclaration: PUBLIC Type Identifier LP Arguments RP LM . VarDeclarations Statements RETURN Expression SEMICOLON RM
   15                  | PUBLIC Type Identifier LP Arguments RP LM . Statements RETURN Expression SEMICOLON RM

    LM              shift, and go to state 58
    IF              shift, and go to state 59
    WHILE           shift, and go to state 60
    SYSTEMOUTPRINT  shift, and go to state 61
    ID              shift, and go to state 4

    LM              [reduce using rule 10 (VarDeclarations)]
    IF              [reduce using rule 10 (VarDeclarations)]
    WHILE           [reduce using rule 10 (VarDeclarations)]
    SYSTEMOUTPRINT  [reduce using rule 10 (VarDeclarations)]
    RETURN          reduce using rule 10 (VarDeclarations)
    RETURN          [reduce using rule 24 (Statements)]
    ID              [reduce using rule 10 (VarDeclarations)]
    $default        reduce using rule 10 (VarDeclarations)

    VarDeclarations  go to state 62
    Statements       go to state 63
    Statement        go to state 64
    Identifier       go to state 65


State 56

   17 Arguments: Type Identifier COMMA . Arguments

    BOOL  shift, and go to state 24
    INT   shift, and go to state 25
    ID    shift, and go to state 4

    $default  reduce using rule 18 (Arguments)

    Arguments   go to state 66
    Type        go to state 49
    Identifier  go to state 27


State 57

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID MAIN LP STRING LB RB Identifier . RP LM Statements RM RM

    RP  shift, and go to state 67


State 58

   25 Statement: LM . Statements RM

    LM              shift, and go to state 58
    IF              shift, and go to state 59
    WHILE           shift, and go to state 60
    SYSTEMOUTPRINT  shift, and go to state 61
    ID              shift, and go to state 4

    $default  reduce using rule 24 (Statements)

    Statements  go to state 68
    Statement   go to state 64
    Identifier  go to state 65


State 59

   26 Statement: IF . LP Expression RP Statement ELSE Statement

    LP  shift, and go to state 69


State 60

   27 Statement: WHILE . LP Expression RP Statement

    LP  shift, and go to state 70


State 61

   28 Statement: SYSTEMOUTPRINT . LP Expression RP SEMICOLON

    LP  shift, and go to state 71


State 62

    9 VarDeclarations: VarDeclarations . VarDeclaration
   14 MethodDeclaration: PUBLIC Type Identifier LP Arguments RP LM VarDeclarations . Statements RETURN Expression SEMICOLON RM

    LM              shift, and go to state 58
    IF              shift, and go to state 59
    WHILE           shift, and go to state 60
    BOOL            shift, and go to state 24
    INT             shift, and go to state 25
    SYSTEMOUTPRINT  shift, and go to state 61
    ID              shift, and go to state 4

    $default  reduce using rule 24 (Statements)

    VarDeclaration  go to state 28
    Type            go to state 30
    Statements      go to state 72
    Statement       go to state 64
    Identifier      go to state 73


State 63

   15 MethodDeclaration: PUBLIC Type Identifier LP Arguments RP LM Statements . RETURN Expression SEMICOLON RM

    RETURN  shift, and go to state 74


State 64

   23 Statements: Statement . Statements

    LM              shift, and go to state 58
    IF              shift, and go to state 59
    WHILE           shift, and go to state 60
    SYSTEMOUTPRINT  shift, and go to state 61
    ID              shift, and go to state 4

    $default  reduce using rule 24 (Statements)

    Statements  go to state 75
    Statement   go to state 64
    Identifier  go to state 65


State 65

   29 Statement: Identifier . EQ Expression SEMICOLON
   30          | Identifier . LB Expression RB EQ Expression SEMICOLON

    LB  shift, and go to state 76
    EQ  shift, and go to state 77


State 66

   17 Arguments: Type Identifier COMMA Arguments .

    $default  reduce using rule 17 (Arguments)


State 67

    2 MainClass: CLASS Identifier LM PUBLIC STATIC VOID MAIN LP STRING LB RB Identifier RP . LM Statements RM RM

    LM  shift, and go to state 78


State 68

   25 Statement: LM Statements . RM

    RM  shift, and go to state 79


State 69

   26 Statement: IF LP . Expression RP Statement ELSE Statement

    MIN     shift, and go to state 80
    LP      shift, and go to state 81
    TRUE    shift, and go to state 82
    FALSE   shift, and go to state 83
    THIS    shift, and go to state 84
    NEW     shift, and go to state 85
    ID      shift, and go to state 86
    NUM     shift, and go to state 87
    EXMARK  shift, and go to state 88

    MIN       [reduce using rule 51 (Factor)]
    $default  reduce using rule 51 (Factor)

    Expression  go to state 89
    Term        go to state 90
    Factor      go to state 91
    Identifier  go to state 92


State 70

   27 Statement: WHILE LP . Expression RP Statement

    MIN     shift, and go to state 80
    LP      shift, and go to state 81
    TRUE    shift, and go to state 82
    FALSE   shift, and go to state 83
    THIS    shift, and go to state 84
    NEW     shift, and go to state 85
    ID      shift, and go to state 86
    NUM     shift, and go to state 87
    EXMARK  shift, and go to state 88

    MIN       [reduce using rule 51 (Factor)]
    $default  reduce using rule 51 (Factor)
